--- a/pages/curriculum.html
+++ b/pages/curriculum.html
@@ -6,45 +6,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
+    <link rel="stylesheet" href="./css/curriculum.styles.css">
 </head>
 
 <body>
-    <header>
-        <h1>Victor Manuel Sanchez Cotillas</h1>
-    </header>
-    <nav>
-        <!--enlaces-->
-        <a>920938475</a>
-        <a href="Arquitecturasanchez.wordpresss.com" atr1="valor1" atr2="valor2">
-            Arquitectura Sanchez
-        </a>
-    </nav>
-    <!-- etiquetas semanticas-->
-    <main>
-        <!--contanido principal del documento-->
-
-        <section>
-            <h5>C/Don Quijote n 121<h5>
-            <h5>Arquitecturasanchez@gmail.com</h5>
-            <h5>Arquitecturasanchez.wordpresss.com</h5>
-
-            <h2 color="red">Formacion Academica<h2>
-            <h5>Doctorado de arquitectura. En la universidad de Oxford</h5>
-            <h5>Bachillerato en ciencias y tecnologia</h5>
-            <h5>En el instituto ISE Marmaria (Membrillar)</h5>
-
-            <h2 color="red">Experiencia<h2>
-            <ul>
-                <li>Libre de restricciones para viajar</li>
-                <Li>Muy trabajador</Li>
-                <Li>Mantiene siempre el area de trabajo ordenado</Li>
-            </ul>
-
-        </section>
+    <main class="marco cv">
+            <section class="personal">
+                <!-- lineas de arriba -->
+                <hr id="l1">
+                <hr id="l2">
+                <hr id="l3">
+                <div class="personal_left">
+                    <h1>Victor Manuel Sanchez Cotillas</h1>
+                    <div class="personal_left_datos">
+                        <p>920938475</p>
+                        <p>C/Don Quijote n 121<p>
+                        <p>Arquitecturasanchez@gmail.com</p>
+                        <p>Arquitecturasanchez.wordpresss.com</p>
+                        <a href="https/Arquitecturasanchez.wordpresss.com" atr1="valor1" atr2="valor2">
+                            <p>Arquitectura Sanchez</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="personal_right">
+                    <img src="img/Foto.jpg">
+                </div>
+            </section>
+            <section class="secForm_Academica">
+                <div class="Form_Academica">            
+                    <h2 style="color: brown">Formaci&oacuten Acad&eacutemica</h2> 
+                    <div class="Form_Academica_left">
+                        <div class="Form_Academica_left_datos">
+                            <p>Doctorado de arquitectura. En la universidad de Oxford</p>
+                            <p>Bachillerato en ciencias y tecnologia</p>
+                            <p>En el instituto ISE Marmaria (Membrillar)</p>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="Form_Academica_right">
+                        <p>2015 - 2020</p>
+                        <p>2013 - 2015</p>
+                        <p>2009 - 2013</p>
+                    </div>
+                </div>
+            </section>
+            <div class="Form_Extra_Academica">            
+                <h2 style="color: brown">Formaci&oacuten Extra acad&eacutemica</h2>
+                <div class="Form_Extra_Academica_left">
+                    <p>Grado C2 de ingl&eacutes</p>
+                    <p>En la academia de idiomas de Membrilla realizado durante 2 meses para alcanzar el nivel actual de ingl&eacutes.</p>
+                    <p></p>
+                </div>
+                <div class="Form_Extra_Academica_right">
+                    <p>2013 - 2015</p>
+                </div>
+            </div>
+            </section>
+            <div class="Experiencia">
+                <h2 style="color: brown">Experiencia</h2>
+                <table>
+                    <tr>
+                        <td colspan="2">
+                    <h3 style="color: brown">2020 - 2023 | Arquitecto jefe.</h3>
+                        <tr>
+                            <td colspan="2">
+                        <p>Banco Santander Madrid. España.</p>
+                    <tr>
+                        <td colspan="2">
+                            <h5 style="color: black">Diseño de la nueva sede de este banco en Madrid.</h5>
+                        </td>
+                    </tr>
+                </table>
+            <div class="Calificaciones">
+                <h2 style="color: brown">Calificaciones<h2>
+                    <ul>
+                        <h6>
+                        <li>Libre de restricciones para viajar</li>
+                        <Li>Muy trabajador</Li>
+                        <Li>Mantiene siempre el area de trabajo ordenado</Li>
+                        </h6>
+                    </ul>
+                </div>
     </main>
-    <aside>
-        <p>Foto</p>
-    </aside>
 </body>
 
 </html>
